# spm-project

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh
benchmark_workspace/: FileDimension.ipynb  ImplementationAnalysis.ipynb  README.md  Sequential Time.ipynb  Sequential.ipynb  Stage Analysis.ipynb  Thread_impl.ipynb  collect_data.sh  reading_stage.ipynb  requirements.txt  result.csv  spedup.sh
benchmark_workspace/b_tools/: __init__.py  analysis.py  ds_generator.py  merge_results.py  output_parser.py  preprocess.py
benchmark_workspace/dataset/: README.md
dataset/: ds_generator.py
src/: main.cpp
src/common/: data_types.hpp  file_writer.cpp  file_writer.hpp  frequency.hpp  huffman_builder.cpp  huffman_builder.hpp  huffman_map.hpp  huffman_tree.cpp  huffman_tree.hpp  write.cpp  write.hpp
src/fastflow/: ff_impl.cpp  ff_impl.hpp
src/fastflow/stages/: ff_freq.cpp  ff_freq.hpp  ff_mapping.cpp  ff_mapping.hpp  ff_transform.cpp  ff_transform.hpp
src/seq/: seq_impl.cpp  seq_impl.hpp
src/seq/stages/: frequency_mapper.cpp  frequency_mapper.h  seq_encoding.cpp  seq_encoding.hpp  seq_freq.cpp  seq_freq.h  seq_freq_map.cpp  seq_freq_map.h  seq_mapping.cpp  seq_mapping.hpp  seq_read.cpp  seq_read.hpp  seq_transform.cpp  seq_transform.hpp
src/test/: test.cpp  test_common.h
src/thr/: thr_impl.cpp  thr_impl.hpp  thread_pool.cpp  thread_pool.hpp
src/thr/stages/: thr_freq.cpp  thr_freq.hpp  thr_freq_map.cpp  thr_freq_map.hpp  thr_mapping.cpp  thr_mapping.hpp  thr_read.cpp  thr_read.hpp  thr_transform.cpp  thr_transform.hpp
src/utils/: Logger.cpp  file_utils.cpp  file_utils.hpp  logger.cpp  logger.hpp  my_timer.cpp  my_timer.hpp  thread_pool.cpp  thread_pool.hpp
